--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
-workspace = { members = ["test_helper"] }
+[workspace]
+members = [
+    "test_helper"
+]
+
 [package]
 name = "registry"
 version = "1.0.0"
@@ -10,8 +14,7 @@ git-fetch-with-cli = true
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-# common = { git = "https://github.com/ociswap/pools-common" }
-common = { git = "ssh://git@github.com/ociswap/pools-common.git" }
+common = { git = "https://github.com/ociswap/pools-common" }
 
 [dev-dependencies]
 transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
@@ -24,12 +27,8 @@ registry_test_helper = { path = "test_helper" }
 pretty_assertions = "1.3.0"
 test-case = "3"
 
-[features]
-default = []
-test = []
-
 [lib]
-crate-type = ["cdylib", "lib"]
+crate-type = ["lib"]
 
 [profile.dev]
 opt-level = 'z'
