--- a/test_helper/Cargo.toml
+++ b/test_helper/Cargo.toml
@@ -14,8 +14,7 @@ radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1
 scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0-alpha.5" }
-# common = { git = "https://github.com/ociswap/pools-common" }
-common = { git = "ssh://git@github.com/ociswap/pools-common.git" }
+common = { git = "https://github.com/ociswap/pools-common" }
 pretty_assertions = "1.3.0"
 lazy_static = "1.4.0"
 
