--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ pretty_assertions = "1.3.0"
 test-case = "3"
 
 [lib]
-crate-type = ["lib"]
+crate-type = ["cdylib", "lib"]
 
 [profile.dev]
 opt-level = 'z'
