--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,16 @@
-[workspace]
-members = [
-    "test_helper"
-]
-
 [package]
 name = "registry"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 
 [dependencies]
-sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-common = { git = "https://github.com/ociswap/pools-common", tag = "v1.0.5" }
+sbor = "1.2.0"
+scrypto = "1.2.0"
+common = { git = "https://github.com/ociswap/pools-common", tag = "v1.1.0" }
 
 [dev-dependencies]
-transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0-alpha.5" }
+scrypto-test = "1.2.0"
+scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0" }
 registry_test_helper = { path = "test_helper" }
 pretty_assertions = "1.3.0"
 test-case = "3"
