--- a/test_helper/Cargo.toml
+++ b/test_helper/Cargo.toml
@@ -4,12 +4,9 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0-alpha.5" }
+sbor = "1.2.0"
+scrypto = "1.2.0"
+radix-engine = "1.2.0"
+scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0" }
 pretty_assertions = "1.3.0"
 lazy_static = "1.4.0"
