Remove --all parameter since there is no workspace

--- a/.github/workflows/blueprints.yaml
+++ b/.github/workflows/blueprints.yaml
@@ -27,4 +27,4 @@ jobs:
           cache-on-failure: "true"
           cache-all-crates: "true"
 
-      - run: cargo test --all --profile=dev --no-fail-fast
+      - run: cargo test --profile=dev --no-fail-fast
